--- a/views/base/shipyard.html
+++ b/views/base/shipyard.html
@@ -25,7 +25,7 @@
             <div id="ship-conception">
                 <div id="frames">
                     <header>
-                        <h3>Châssis</h3>
+                        <h3 data-translate="true">ships.frame</h3>
                     </header>
                     <section>
 
@@ -46,15 +46,15 @@
                     <input type="text" name="ship-name" placeholder="Name"/>
                 </header>
                 <section>
-                    <h3>Prix</h3>
+                    <h3 data-translate="true">ships.price</h3>
                     <div class="list"></div>
                 </section>
                 <footer>
-                    <button onclick="displayFrames();">
-                        Annuler
+                    <button data-translate="true" onclick="displayFrames();">
+                        ships.cancel
                     </button>
-                    <button onclick="createShipModel();">
-                        Sauvegarder
+                    <button data-translate="true" onclick="createShipModel();">
+                        ships.save
                     </button>
                 </footer>
             </div>
