--- a/views/faction/index.html
+++ b/views/faction/index.html
@@ -10,8 +10,7 @@
   <body>
     <div id="faction">
       <div id="infos">
-        <h1 class="faction-name">
-            <div class="faction-flag"></div>
+        <h1>
         </h1>
       </div>
       <div id="members">
@@ -32,6 +31,7 @@
     </div>
     <script type="text/javascript" src="/config/config.js"></script>
     <script type="text/javascript" src="/static/js/main.js"></script>
+    <script type="text/javascript" src="/static/js/components/faction/banner.js"></script>
     <script type="text/javascript" src="/static/js/faction.js"></script>
   </body>
 </html>
