--- a/views/profile/index.html
+++ b/views/profile/index.html
@@ -11,7 +11,7 @@
     <div id="player">
       <div id="profile">
         <h1 class="player-name"></h1>
-        <h3 class="faction-name"><a href="/views/faction"><div class="faction-flag"></div></a></h3>
+        <h3 class="faction-name"><a href="/views/faction"></a></h3>
       </div>
       <div id="planets">
         <header>
@@ -24,6 +24,7 @@
     </div>
     <script type="text/javascript" src="/config/config.js"></script>
     <script type="text/javascript" src="/static/js/main.js"></script>
+    <script type="text/javascript" src="/static/js/components/faction/banner.js"></script>
     <script type="text/javascript" src="/static/js/profile.js"></script>
   </body>
 </html>
