--- a/views/faction/index.html
+++ b/views/faction/index.html
@@ -30,8 +30,7 @@
       </div>
     </div>
     <script type="text/javascript" src="/config/config.js"></script>
-    <script type="text/javascript" src="/static/js/main.js"></script>
-    <script type="text/javascript" src="/static/js/components/faction/banner.js"></script>
-    <script type="text/javascript" src="/static/js/faction.js"></script>
+    <script type="module" src="/static/js/main.js"></script>
+    <script type="module" src="/static/js/faction.js"></script>
   </body>
 </html>
