--- a/views/base/population.html
+++ b/views/base/population.html
@@ -33,11 +33,12 @@
         </div>
 
         <script type="text/javascript" src="/config/config.js"></script>
-        <script type="text/javascript" src="/static/js/main.js"></script>
-        <script type="text/javascript" src="/static/js/base.js"></script>
-        <script type="text/javascript" src="/static/js/components/planet/population.js"></script>
-        <script type="text/javascript" src="/static/js/components/planet/resources.js"></script>
-        <script type="text/javascript">
+        <script type="module" src="/static/js/main.js"></script>
+        <script type="module">
+            import { initBasePopulation, addPoint, substractPoint } from '/static/js/base.js';
+
+            window.addPoint = addPoint;
+            window.substractPoint = substractPoint;
             window.addEventListener('load', initBasePopulation);
         </script>
   </body>
