--- a/views/profile/index.html
+++ b/views/profile/index.html
@@ -23,8 +23,7 @@
       </div>
     </div>
     <script type="text/javascript" src="/config/config.js"></script>
-    <script type="text/javascript" src="/static/js/main.js"></script>
-    <script type="text/javascript" src="/static/js/components/faction/banner.js"></script>
-    <script type="text/javascript" src="/static/js/profile.js"></script>
+    <script type="module" src="/static/js/main.js"></script>
+    <script type="module" src="/static/js/profile.js"></script>
   </body>
 </html>
