--- a/views/register/planet.html
+++ b/views/register/planet.html
@@ -27,10 +27,12 @@
     </div>
     <input id="registration-step" type="hidden" value="planets" />
     <script type="text/javascript" src="/config/config.js"></script>
-    <script type="text/javascript" src="/static/js/main.js"></script>
     <script type="text/javascript" src="/static/js/lib/chart.js"></script>
-    <script type="text/javascript" src="/static/js/components/planet/relations.js"></script>
-    <script type="text/javascript" src="/static/js/components/planet/resources.js"></script>
-    <script type="text/javascript" src="/static/js/registration.js"></script>
+    <script type="module" src="/static/js/main.js"></script>
+    <script type="module">
+        import { validate } from '/static/js/registration.js';
+
+        window.validate = validate;
+    </script>
   </body>
 </html>
