--- a/views/base/shipyard.html
+++ b/views/base/shipyard.html
@@ -12,10 +12,15 @@
                 <h3></h3>
                 <img id="logout" src="/static/images/logout.svg" onclick="logout();"/>
             </div>
+            <div id="storage-toolbar">
+                <header></header>
+                <section></section>
+            </div>
             <div id="ships-list">
                 <header>
                     <button onclick="displayFrames();">
                         <img src="/static/images/buildings/build.svg"/>
+                        <span data-translate="true">ships.create_model</span>
                     </button>
                 </header>
                 <section>
@@ -50,7 +55,7 @@
                     <div class="list"></div>
                 </section>
                 <footer>
-                    <button data-translate="true" onclick="displayFrames();">
+                    <button data-translate="true" onclick="displayShipModels();">
                         ships.cancel
                     </button>
                     <button data-translate="true" onclick="createShipModel();">
@@ -74,8 +79,9 @@
         <script type="text/javascript" src="/config/config.js"></script>
         <script type="module" src="/static/js/main.js"></script>
         <script type="module">
-            import { initShipyard, displayFrames, createShipModel } from '/static/js/shipyard.js';
+            import { initShipyard, displayShipModels, displayFrames, createShipModel } from '/static/js/shipyard.js';
 
+            window.displayShipModels = displayShipModels;
             window.displayFrames = displayFrames;
             window.createShipModel = createShipModel;
             window.addEventListener('load', initShipyard);
