Implement ship creation interface

--- a/views/base/shipyard.html
+++ b/views/base/shipyard.html
@@ -46,6 +46,29 @@
                     </section>
                 </div>
             </div>
+            <div id="ship-construction">
+                <header>
+                    <h1></h1>
+                    <div>
+                        <input type="number" name="quantity" value="1" min="1" max="100"/>
+                        <button data-translate="true">ships.create</button>
+                        <button data-translate="true" onclick="displayShipModels();">ships.cancel</button>
+                    </div>
+                </header>
+                <section>
+                    <header><h3 data-translate="true">ships.modules_list</h3><div></div></header>
+                    <section>
+                        <div>
+                            <header><h3></h3></header>
+                            <section></section>
+                        </div>
+                        <div>
+                            <header><h3 data-translate="true">ships.stats_list</h3><div></div></header>
+                            <section><h3 data-translate="true">ships.price</h3><div></div></section>
+                        </div>
+                    </section>
+                </section>
+            </div>
             <div id="ship-data" class="module">
                 <header>
                     <input type="text" name="ship-name" placeholder="Name"/>
