--- a/views/base/shipyard.html
+++ b/views/base/shipyard.html
@@ -16,6 +16,13 @@
                 <header></header>
                 <section></section>
             </div>
+            <div id="ship-constructions-list">
+                <header>
+                    <h3 data-translate="true">ships.construction_list</h3>
+                    <a href="/views/base/population.html" class="population-points"></a>
+                </header>
+                <section></section>
+            </div>
             <div id="ships-list">
                 <header>
                     <button onclick="displayFrames();">
