--- a/static/css/map.css
+++ b/static/css/map.css
@@ -73,18 +73,27 @@ html {
   position: absolute;
   width: 20px;
   height: 20px;
-  border-radius: 10px;
+  border-radius: 15px;
   cursor: pointer;
   z-index: 10;
+  border: 1px solid #222;
 }
 
-#system > .planet[data-type="arctic"] { background-color: #B0B0FF; }
-#system > .planet[data-type="desert"] { background-color: #f5cc4d; }
-#system > .planet[data-type="oceanic"] { background-color: #0077be; }
-#system > .planet[data-type="temperate"] { background-color: #00b300; }
-#system > .planet[data-type="tropical"] { background-color: #008000; }
-#system > .planet[data-type="rocky"] { background-color: #AA9a9a; }
-#system > .planet[data-type="volcanic"] { background-color: #C60000; }
+#system > .faction-flag {
+    width: 40px;
+    height: 40px;
+    border-radius: 25px;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+#system > .planet[data-type="arctic"] { background-color: #B0B0FF;border: 2px solid #B0B0FF; }
+#system > .planet[data-type="desert"] { background-color: #f5cc4d;border: 2px solid #f5cc4d; }
+#system > .planet[data-type="oceanic"] { background-color: #0077be;border: 2px solid #0077be; }
+#system > .planet[data-type="temperate"] { background-color: #00b300;border: 2px solid #00b300; }
+#system > .planet[data-type="tropical"] { background-color: #008000;border: 2px solid #008000; }
+#system > .planet[data-type="rocky"] { background-color: #AA9a9a;border: 2px solid #AA9a9a; }
+#system > .planet[data-type="volcanic"] { background-color: #C60000;border: 2px solid #C60000; }
 
 #map-link {
   padding-top: 60px;
