start of fleet-base view

--- a/views/base/fleet-base.html
+++ b/views/base/fleet-base.html
@@ -22,9 +22,12 @@
         </div>
         
         <div id="fleets-view">
-            <header>
+            <section id=fleet-create-section>
+                <div data-translate="true" id ="fleet-create">fleet.view.planet.create</div>
+            </section>
+            <section>
                 <h3 data-translate="true">fleet.view.planet.title</h3>
-            </header>
+            </section>
             <section id="fleets-list">
 
             </section>
