--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,21 +1,19 @@
 @import url('https://fonts.googleapis.com/css?family=Electrolize');
 
 html {
-  background: #202030;
-  color: #EFEFEF;
-  margin:0px;
-  font-family: 'Electrolize', serif;
+    height: 100%;
+    background: #202030;
+    color: #EFEFEF;
+    font-family: 'Electrolize', serif;
 }
 
 body {
-  margin: 0px;
-}
-
-#wrapper {
-  display: grid;
-  grid-template-columns: repeat(5, 1fr);
-  grid-gap: 10px;
-  grid-auto-rows: minmax(100px, auto);
+    height: 100%;
+    margin: 0px;
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-gap: 10px;
+    grid-auto-rows: minmax(100px, auto);
 }
 
 #storage-toolbar {
@@ -118,7 +116,7 @@ body {
     cursor:pointer;
 }
 
-#wrapper > .module {
+body > .module {
     background-color: rgba(75, 75, 100, 0.4);
     border: 2px solid #010F2A;
     border-radius: 5px;
@@ -126,7 +124,7 @@ body {
     box-shadow: 0px 0px 5px rgba(0,0,0,0.6);
 }
 
-#wrapper > .module > header {
+body > .module > header {
     position: relative;
     max-width: calc(100% - 60px);
     height: 30px;
@@ -135,7 +133,7 @@ body {
     border-bottom: 3px solid #E1BB8A;
 }
 
-#wrapper > .module > header::after {
+body > .module > header::after {
     width: 0px;
     height: 0px;
     content: '';
@@ -148,11 +146,11 @@ body {
     border-bottom: 20px solid transparent;
 }
 
-#wrapper > .module > header > h3 {
+body > .module > header > h3 {
     margin: 0px;
 }
 
-#wrapper > .module > section {
+body > .module > section {
     padding: 20px;
 }
 
