--- a/views/base/fleet-base.html
+++ b/views/base/fleet-base.html
@@ -29,7 +29,8 @@
                 <h3 data-translate="true">fleet.view.planet.title</h3>
             </section>
             <section id="fleets-list">
-
+            <span id="error-fleet-list-section"></span>
+            <table id = "fleet-table"></table>
             </section>
         </div>
 
