--- a/views/fleet/fleet-all.html
+++ b/views/fleet/fleet-all.html
@@ -18,7 +18,8 @@
                 <h1  data-translate="true" >fleet.view.all.title</h1>
             </header>
             <section id="fleets-list">
-
+            <span id="error-fleet-list-section"></span>
+            <table id = "fleet-table"></table>
             </section>
         </div>
 
