moved function to avoid including usless js

--- a/views/base/fleet-base.html
+++ b/views/base/fleet-base.html
@@ -39,8 +39,8 @@
         <script type="module" src="/static/js/fleet.js"></script>
         <script type="module">
             
-            import { creatFleet, initFleetViewPlanet } from '/static/js/fleet.js';
-            import { initBaseForFleet } from '/static/js/base.js';
+            import { creatFleet, initFleetViewPlanet,initBaseForFleet } from '/static/js/fleet.js';
+            
             
             window.creatFleet = creatFleet;
             window.initBaseForFleet = initBaseForFleet;
