--- a/static/css/main.css
+++ b/static/css/main.css
@@ -2,7 +2,7 @@
 
 html {
     height: 100%;
-    background: #202030;
+    background: #090A0A;
     color: #EFEFEF;
     font-family: 'Electrolize', serif;
 }
@@ -11,9 +11,452 @@ body {
     height: 100%;
     margin: 0px;
     display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    grid-gap: 10px;
-    grid-auto-rows: minmax(100px, auto);
+    grid-template-columns: repeat(10, 1fr);
+    grid-gap: 0px;
+    grid-auto-rows: minmax(10%, auto);
+}
+
+#logout {
+    grid-column: 10;
+    grid-row: 1;
+    text-align: right;
+    padding-top: 15px;
+    padding-right: 20px;
+}
+
+#logout > img {
+    width: 32px;
+    height: 32px;
+}
+
+#top-menu {
+    position: relative;
+    height: 75px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    grid-column: 3/8;
+    grid-row: 1;
+    border-bottom: 2px solid #A0A0A0;
+    background-color: #090A0A;
+}
+
+#top-menu::before {
+    position: absolute;
+    width: 50px;
+    height: 125px;
+    transform:rotate(-45deg);
+    content: ' ';
+    bottom: -2px;
+    left: -52px;
+    background-color: #090A0A;
+    border-left: 2px solid #B9B9B9;
+    z-index: 1;
+}
+
+#top-menu::after {
+    position: absolute;
+    width: 50px;
+    height: 125px;
+    transform:rotate(45deg);
+    content: ' ';
+    bottom: -2px;
+    right: -52px;
+    background-color: #090A0A;
+    border-right: 2px solid #B9B9B9;
+    z-index: 1;
+}
+
+#top-menu > a {
+    flex-basis: 1;
+    flex-grow: 1;
+    display: flex;
+    flex-direction:column;
+    justify-content: center;
+    align-items: center;
+    color: #EFEFEF;
+    text-decoration: none;
+    border-right: 1px solid #808080;
+    font-size: 0.9em;
+    z-index: 2;
+}
+
+#top-menu > a:nth-child(3) {
+    padding-right: 40px;
+}
+
+#top-menu > a:nth-child(4) {
+    padding-left: 40px;
+}
+
+#top-menu > a:last-child {
+    border-left: 1px solid #808080;
+    border-right: 0px solid #808080;
+}
+
+#top-menu > a > img {
+    height: 26px;
+    margin-bottom: 10px;
+}
+
+#top-menu > a > img.outline {
+    display: none;
+}
+
+#top-menu > a:hover > img:not(.outline) {
+    display: none;
+}
+
+#top-menu > a:hover > img.outline {
+    display: inline;
+}
+
+#top-menu > section {
+    position: absolute;
+    width: 100px;
+    top: 50px;
+    border-top: 5px solid #B9B9B9;
+    border-radius: 100px 100px 0px 0px;
+    background-color: #090A0A;
+    transform: scale(2, 1);
+    padding-top: 10px;
+    z-index: 3;
+}
+
+#top-menu > section > header {
+    width: 60px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    background-color: #B9B9B9;
+    border-radius: 200px 200px 200px 200px;
+    margin: auto;
+}
+
+#top-menu > section > header > img {
+    display: block;
+    margin: auto;
+    width: 58px;
+    height: 58px;
+    transform: scale(0.5, 1);
+}
+
+#top-menu > section > section {
+    transform: scale(0.5, 1);
+}
+
+#top-menu > section > section > a {
+    position: absolute;
+    padding: 5px 10px;
+    text-decoration: none;
+    background-color: #808080;
+    border-radius: 20px 20px 10px 10px;
+    transition: background-color 0.2s ease-out;
+}
+
+#top-menu > section > section > a:hover {
+    background-color: #D0D0D0;
+}
+
+#top-menu > section > section > a:first-child {
+    top: -50px;
+    left: -30px;
+    transform: rotate(250deg);
+}
+
+#top-menu > section > section > a:nth-child(2) {
+    top: -5px;
+    left: calc(50% - 22px);
+    transform: rotate(180deg);
+}
+
+#top-menu > section > section > a:last-child {
+    top: -50px;
+    right: -30px;
+    transform: rotate(-250deg);
+}
+
+#top-menu > section > section > a > img {
+    width: 20px;
+    height: 20px;
+}
+
+#left-menu {
+    position: relative;
+    display: grid;
+    grid-column: 1/4;
+    grid-row: 6/10;
+    grid-template-columns: repeat(10, 1fr);
+    grid-gap: 0px;
+    grid-auto-rows: minmax(10%, auto);
+    overflow: hidden;
+}
+
+#left-menu > header {
+    position: relative;
+    grid-column: 1;
+    grid-row: 1/11;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    padding-top: 40px;
+    padding-bottom: 150px;
+    z-index: 1;
+}
+
+#left-menu > header::after {
+    position: absolute;
+    width: 0px;
+    height: 0px;
+    top: 0px;
+    right: 0px;
+    content: ' ';
+    border-top: 20px solid #090A0A;
+    border-right: 20px solid #090A0A;
+    border-left: 20px solid #B9B9B9;
+    border-bottom: 20px solid #B9B9B9;
+}
+
+.side-menu {
+    background-color: #B9B9B9;
+    color: #090A0A;
+}
+
+.side-menu > div {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+#left-menu > header > div {
+    flex-direction: column;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    border-top: 1px solid #A0A0A0;
+    border-bottom: 1px solid #A0A0A0;
+}
+
+.side-menu > div > div {
+    width: 32px;
+    height: 32px;
+    background-image: url('../images/picto/G_P_Hexa_64px.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    text-align: center;
+}
+
+.side-menu > div > div > img {
+    height: 24px;
+    padding-top: 4px;
+}
+
+.side-menu > div > span {
+    font-size: 0.8em;
+}
+
+#left-menu > header > div > span {
+    padding-top: 10px;
+}
+
+#left-menu > footer > div > span {
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+#left-menu > section  {
+    grid-column: 1/4;
+    grid-row: 8/11;
+
+    width: 130px;
+    height: 120px;
+    z-index: 2;
+}
+
+#left-menu > section > div {
+    position: relative;
+    margin: auto;
+    margin-left: -10px;
+    padding: 5px;
+    background-color: #B9B9B9;
+    border-radius: 200px;
+    text-align: center;
+    border: 8px solid #090A0A;
+    overflow: hidden;
+}
+
+#left-menu > section > div > div {
+    width: 110px;
+    height: 110px;
+    margin: auto;
+    background-color: #090A0A;
+    border-radius: 200px;
+}
+
+#left-menu > section > div > div > img {
+    width: 84px;
+    height: 84px;
+}
+
+#left-menu > section > div > span {
+    position: absolute;
+    display: block;
+    width: 100%;
+    bottom: 0px;
+    background-color: #B9B9B9;
+    color: #090A0A;
+    padding-top: 5px;
+    padding-bottom: 10px;
+    font-size: 1.0em;
+    font-weight: bold;
+    font-variant: small-caps;
+}
+
+#left-menu > footer {
+    position: absolute;
+    bottom: 0px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
+    grid-column: 1/11;
+    grid-row: 10;
+    padding-right: 40px;
+    padding-left: 150px;
+    z-index: 1;
+}
+
+#left-menu > footer::after {
+    position: absolute;
+    width: 0px;
+    height: 0px;
+    top: 0px;
+    right: 0px;
+    content: ' ';
+    border-top: 18px solid #090A0A;
+    border-right: 18px solid #090A0A;
+    border-left: 18px solid #B9B9B9;
+    border-bottom: 18px solid #B9B9B9;
+}
+
+#left-menu > footer > div {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+#right-menu {
+    position: relative;
+    display: grid;
+    grid-column: 8/11;
+    grid-row: 6/10;
+    grid-template-columns: repeat(10, 1fr);
+    grid-gap: 0px;
+    grid-auto-rows: minmax(10%, auto);
+    overflow: hidden;
+}
+
+#right-menu > header {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    grid-row: 1/11;
+    grid-column: 10;
+    padding-top: 40px;
+    padding-bottom: 140px;
+    z-index: 1;
+}
+
+#right-menu > header::before {
+    position: absolute;
+    width: 0px;
+    height: 0px;
+    top: 0px;
+    left: 0px;
+    content: ' ';
+    border-top: 20px solid #090A0A;
+    border-left: 20px solid #090A0A;
+    border-right: 20px solid #B9B9B9;
+    border-bottom: 20px solid #B9B9B9;
+}
+
+#right-menu > header > div {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items:center;
+    padding-top: 15px;
+    padding-bottom: 10px;
+    border-top: 1px solid #A0A0A0;
+    border-bottom: 1px solid #A0A0A0;
+}
+
+#right-menu > header > div > span {
+    padding-top: 10px;
+}
+
+#right-menu > section {
+    position: relative;
+    grid-column: 8/11;
+    grid-row: 8/11;
+    z-index: 2;
+}
+
+#right-menu > section > div {
+    position: absolute;
+    right: -10px;
+    bottom: -10px;
+    background-color: #B9B9B9;
+    border: 8px solid #090A0A;
+    padding: 5px;
+    border-radius: 200px;
+}
+
+#right-menu > section > div > img {
+    display: block;
+    margin: auto;
+    width: 96px;
+    height: 96px;
+}
+
+#right-menu > footer {
+    position: absolute;
+    bottom: 0px;
+    right: 0px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
+    grid-column: 1/11;
+    grid-row: 10;
+    padding-left: 40px;
+    padding-right: 140px;
+    z-index: 1;
+}
+
+#right-menu > footer::before {
+    position: absolute;
+    width: 0px;
+    height: 0px;
+    top: 0px;
+    left: 0px;
+    content: ' ';
+    border-top: 18px solid #090A0A;
+    border-left: 18px solid #090A0A;
+    border-right: 18px solid #B9B9B9;
+    border-bottom: 18px solid #B9B9B9;
+}
+
+#right-menu > footer > div {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+#right-menu > footer > div > span {
+    padding-left: 10px;
+    padding-right: 15px;
 }
 
 #storage-toolbar {
