--- a/static/css/map.css
+++ b/static/css/map.css
@@ -2,7 +2,7 @@ html {
   width:100%;
   height: 100%;
   overflow: hidden;
-  background-color: #202030;
+  background-color: #090A0A;
 }
 
 #map {
@@ -23,7 +23,8 @@ html {
   position: fixed;
   width: 200px;
   height: 200px;
-  bottom:0px;
+  top:0px;
+  left: 0px;
   z-index: 10;
   background-color: rgba(0,0,0,0.8);
 }
