--- a/views/overview/index.html
+++ b/views/overview/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <title>Kalaxia</title>
     <link rel="stylesheet" type="text/css" href="/static/css/main.css" />
-    <link rel="stylesheet" type="text/css" href="/static/css/profile.css" />
+    <link rel="stylesheet" type="text/css" href="/static/css/overview.css" />
     <link rel="stylesheet" type="text/css" href="/static/css/planet.css" />
   </head>
   <body>
@@ -20,6 +20,6 @@
       </div>
     <script type="text/javascript" src="/config/config.js"></script>
     <script type="module" src="/static/js/main.js"></script>
-    <script type="module" src="/static/js/profile.js"></script>
+    <script type="module" src="/static/js/overview.js"></script>
   </body>
 </html>
