--- a/static/css/fleet.css
+++ b/static/css/fleet.css
@@ -134,12 +134,92 @@ a.planet { /* hyper link for planet*/
 	color:#fff;
 }
 
-.ships-list > div.ships-table{
+.ships-list {
+	max-width: 80%;
+}
+.ships-list > div.ships-table {
 	display: flex;
+	flex-direction: column;
+	flex-wrap: wrap;
+	margin-left: 10px;
 }
 
 .ships-list > div.ships-table > .flex-row,
-.ships-list > div.ships-table > .flex-row-header,
-.ships-list > div.ships-table > .flex-row-eror {
+.ships-list > div.ships-table > .flex-row-error {
 	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	max-width: 800px;
+}
+
+.ships-list > div.ships-table > .flex-row > div,
+.ships-list > div.ships-table > .flex-row-error > div {
+	/*width:100%;*/
+	overflow: hidden;
+	flex-basis: 0px;
+	padding: 3px;
+	margin: 1px;
+}
+
+.ships-list > div.ships-table > .flex-row > div {
+	flex-grow: 1;
+}
+
+.ships-list > div.ships-table > .flex-row > div.model-number {
+	/*width:20%;*/
+	flex-grow: 0.4;
+}
+
+.ships-list > div.ships-table > .flex-row:not(:first-child) > div.model-number {
+	color: #e1bb8a;
+	text-align: right;
+}
+
+.ships-list > div.ships-table > .flex-row-error > div {
+	flex-grow: 1;
+	width: 100%;
+	text-align : center
+}
+
+.ships-list > div.ships-table > div:nth-child(even) {
+	background-color: #303040;
+}
+
+.ships-list > div.ships-table > div:nth-child(odd) {
+	background-color: #505060;
+}
+.ships-list > div.ships-table > div:first-child {
+	border-bottom: 2px solid white;
+	background-color: #606070;
+}
+
+.ships-list > div.ships-table > .flex-row > div.model-transfer {
+	flex-grow: 1.5;
+}
+.ships-list > div.ships-table > .flex-row > div.model-transfer > input {
+	width: 20%;
+	background-color: #606070;
+	border: 1px solid;
+	margin-right: 10px;
+}
+
+.ships-list > div.ships-table > .flex-row > div.model-transfer > input[type="number"]::-webkit-inner-spin-button {
+	opacity: 0;
+}
+
+.ships-list > div.ships-table > .flex-row > div.model-transfer > .transfer-ship {
+	width: 100px;
+	padding-left: 5px;
+	padding-right: 5px;
+	padding-top: 1px;
+	padding-bottom: 2px;
+	background-color: black;
+	border: 1px solid #e1bb8a;
+	cursor: pointer;
+	transition: background-color 0.2s ease-out;
+	text-align: center;
+}
+
+.ships-list > div.ships-table > .flex-row > div.model-transfer > .transfer-ship:hover {
+	background-color: #222;
 }
