--- a/static/css/map.css
+++ b/static/css/map.css
@@ -37,11 +37,10 @@ html {
 }
 
 #system {
-  position: absolute;
-  width: 100%;
-  height: 100%;
+    position: relative;
+    grid-column: 1/10;
+    grid-row: 2/10;
   overflow: hidden;
-  z-index: -1;
 }
 
 #star {
@@ -97,7 +96,8 @@ html {
 #system > .planet[data-type="volcanic"] { background-color: #C60000;border: 2px solid #C60000; }
 
 #map-link {
-  padding-top: 60px;
+    grid-column: 1;
+    grid-row: 5;
   padding-left: 20px;
 }
 
