--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,4 +1,6 @@
 #planet-data {
+    grid-column: 1/3;
+    grid-row: 1/5;
     width: 80%;
     margin: auto;
     margin-top: 100px;
@@ -10,9 +12,12 @@
 }
 
 #points-configuration {
+    grid-column: 2/10;
+    grid-row: 3/9;
     width: 80%;
     margin: auto;
     font-variant: small-caps;
+    z-index: 10;
 }
 
 #points-configuration > header > #available-points > span {
@@ -210,6 +215,11 @@
     transition: background-color 0.2s ease-out;
 }
 
+#planet-buildings {
+    grid-column: 2/10;
+    grid-row: 2/5;
+}
+
 #planet-buildings > header {
     display: flex;
     justify-content: space-between;
@@ -218,6 +228,8 @@
 
 #planet-available-buildings {
     display: none;
+    grid-column: 2/10;
+    grid-row: 5/8;
 }
 
 #planet-available-buildings.visible {
