--- a/static/css/planet.css
+++ b/static/css/planet.css
@@ -5,13 +5,13 @@
 
 #planet {
     position: relative;
-    grid-column: 3;
-    grid-row: 2/3;
-    align-self: end;
+    grid-column: 4/7;
+    grid-row: 4/6;
+    align-self: center;
   width: 300px;
   height: 300px;
   display: none;
-  margin: 20px;
+  margin: auto;
   -webkit-perspective: 1200px;
   -moz-perspective: 1200px;
   -ms-perspective: 1200px;
@@ -25,131 +25,52 @@
 }
 
 #planet-data {
-    grid-column: 1;
-    grid-row: 2/3;
+    grid-row: 4;
+    grid-column: 1/3;
+    padding-left: 20px;
 }
 
-#planet-data > section > h4 {
-  margin: 0px;
-}
-
-#planet-data > section > .system > a,
-#planet-data > section > h4 > a {
-  color: #E1BB8A;
-  text-decoration: none;
-}
-
-#planet-data > section > .resources {
-  list-style-type: none;
-  padding-left:0px;
-  padding-top: 10px;
-  border-top: 3px solid #EFEFEF;
-}
-
-#planet-data > section > .resources > li > h5 {
-    font-style: italic;
-    min-width: 15px;
-    margin-top: 5px;
-    margin-bottom: 10px;
-    color: #E1BB8A;
-}
-
-#planet-data > section > .resources > li > .info {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-}
-
-#planet-data > section > .resources > li > .info > .density {
-  font-weight: bold;
-}
-
-#planet-data > section > .resources > li > .info > .density > img {
-  width: 32px;
-  height: 32px;
-  margin-right: 10px;
-  /*padding: 5px;
-  border: 2px solid #EFEFEF;*/
-}
-
-#planet-data > section > .resources > li > span,
-#planet-data > section > .resources > li > .info > .storage {
-  color: #E1BB8A;
+#planet-data > h4 > a {
+    text-decoration: none;
+    color: #E1BB81;
 }
 
 #planet-relations {
-    grid-column: 1;
-    grid-row: 3/4;
+    grid-column: 2;
+    grid-row: 6/10;
+    z-index: 10;
 }
 
 #planet-buildings {
-    grid-column: 5;
-    grid-row: 1/3;
-    justify-self: end;
+    grid-column: 9/11;
+    grid-row: 2/6;
     font-variant: small-caps;
 }
 
 #planet-buildings > header {
-    position: relative;
-    width: 100%;
-    height: 30px;
-    padding-top: 5px;
-    background-color: #010F2A;
-    border-bottom: 3px solid #E1BB8A;
-}
-
-#planet-buildings > header::before {
-    position: absolute;
-    width: 0px;
-    height: 0px;
-    left: -50px;
-    bottom: 0px;
-    content: '';
-    border-top: 25px solid #010F2A;
-    border-bottom: 25px solid transparent;
-    border-left: 25px solid transparent;
-    border-right: 25px solid #010F2A;
+    text-align: right;
 }
 
 #planet-buildings > header > a {
     padding: 10px 20px;
     text-decoration: none;
-    color: #E1BB8A;
+    color: #E1BB81;
     font-size: 1.2em;
 }
 
 #planet-buildings > section {
-    position: relative;
-    width: 70px;
     display:flex;
-    flex-direction: column;
-    justify-content: space-around;
+    flex-wrap: wrap;
+    justify-content: flex-end;
     align-items: flex-end;
     padding: 5px 10px;
-    margin-left: 110px;
-    background-color: #010F2A;
-    border-left: 3px solid #EFEFEF;
-}
-
-#planet-buildings > section::after {
-    position: absolute;
-    width: 0px;
-    height: 0px;
-    right: 0px;
-    bottom: -90px;
-    content: '';
-    border-top: 45px solid #010F2A;
-    border-right: 45px solid #010F2A;
-    border-bottom: 45px solid transparent;
-    border-left: 45px solid transparent;
-
 }
 
 #planet-buildings > section > .building {
     position: relative;
     width: 64px;
     height: 64px;
-    margin-top: 10px;
+    margin: 10px;
     border: 2px solid #E1BB8A;
     background-color: #EFEFEF;
     background-repeat: no-repeat;
