--- a/views/base/population.html
+++ b/views/base/population.html
@@ -7,11 +7,6 @@
         <link rel="stylesheet" type="text/css" href="/static/css/base.css" />
     </head>
     <body>
-        <div id="player-data">
-            <h3></h3>
-            <img id="logout" src="/static/images/logout.svg" onclick="logout();"/>
-        </div>
-
         <div id="planet-data">
             <header>
                 <h1></h1>
@@ -35,11 +30,13 @@
         <script type="text/javascript" src="/config/config.js"></script>
         <script type="module" src="/static/js/main.js"></script>
         <script type="module">
+            import App from '/static/js/core/app.js';
             import { initBasePopulation, addPoint, substractPoint } from '/static/js/base.js';
 
             window.addPoint = addPoint;
             window.substractPoint = substractPoint;
-            window.addEventListener('load', initBasePopulation);
+
+            App.init().then(() => { initBasePopulation(); });
         </script>
   </body>
 </html>
