--- a/views/fleet/fleet-all.html
+++ b/views/fleet/fleet-all.html
@@ -8,31 +8,23 @@
         <link rel="stylesheet" type="text/css" href="/static/css/fleet.css" />
     </head>
     <body>
-        <div id="player-data">
-            <h3></h3>
-            <img id="logout" src="/static/images/logout.svg" onclick="logout();"/>
-        </div>
-
         <div id="fleets-view">
             <header>
-                <h3 data-translate="true" >fleet.view.all.title</h1>
+                <h3 data-translate="true">fleet.view.all.title</h1>
             </header>
             <section id="fleets-list">
             <span id="error-fleet-list-section"></span>
-            <table id = "fleet-table"></table>
+            <table id="fleet-table"></table>
             </section>
         </div>
 
         <script type="text/javascript" src="/config/config.js"></script>
         <script type="module" src="/static/js/main.js"></script>
-        <script type="module" src="/static/js/fleet.js"></script>
         <script type="module">
-            import { creatFleet, initFleetView } from '/static/js/fleet.js';
-            
-            //window.creatFleet = creatFleet;
-            
-            window.addEventListener('load', initFleetView);
-           
+            import { initFleetView } from '/static/js/fleet.js';
+            import App from '/static/js/core/app.js';
+
+            App.init().then(() => { initFleetView() });
         </script>
   </body>
 </html>
