--- a/views/fleet/fleet.html
+++ b/views/fleet/fleet.html
@@ -20,33 +20,34 @@
                 
             </section>
         </div>
-        
-        <div id="fleet-view">
-            <section>
-                <h3 data-translate="true">fleet.view.single.title</h3>
-            </section>
-            <section id="fleet-detail">
-                <table id = "fleet-table"></table>
-            </section>
-        </div>
-        
-        <div id="ships-fleet">
-            <section>
-                <h3 data-translate="true">fleet.view.single.ships_in_fleet</h3>
-            </section>
-            <section class="ships-list">
-                <div class="ships-table"></div>
-            </section>
-        </div>
-        
-        <div id="ships-hangar">
-            <section>
-                <h3 data-translate="true">fleet.view.single.ships_in_hangar</h3>
-            </section>
-            <section class="ships-list">
-                <div class="ships-table"></div>
-            </section>
-        </div>
+        <div id="single-fleet-view-container">
+            <div id="fleet-view">
+                <section>
+                    <h3 data-translate="true">fleet.view.single.title</h3>
+                </section>
+                <section id="fleet-detail">
+                    <table id = "fleet-table"></table>
+                </section>
+            </div>
+            
+            <div id="ships-fleet">
+                <section>
+                    <h3 data-translate="true">fleet.view.single.ships_in_fleet</h3>
+                </section>
+                <section class="ships-list">
+                    <div class="ships-table"></div>
+                </section>
+            </div>
+            
+            <div id="ships-hangar">
+                <section>
+                    <h3 data-translate="true">fleet.view.single.ships_in_hangar</h3>
+                </section>
+                <section class="ships-list">
+                    <div class="ships-table"></div>
+                </section>
+            </div>
+        <div>
 
         <script type="text/javascript" src="/config/config.js"></script>
         <script type="module" src="/static/js/main.js"></script>
