--- a/views/base/hangar.html
+++ b/views/base/hangar.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" type="text/css" href="/static/css/main.css" />
         <link rel="stylesheet" type="text/css" href="/static/css/base.css" />
         <link rel="stylesheet" type="text/css" href="/static/css/hangar.css" />
+        <link rel="stylesheet" type="text/css" href="/static/css/fleet.css" />
     </head>
     <body>
         <div id="player-data">
@@ -25,19 +26,18 @@
             <section>
                 <h3 data-translate="true">hangar.title</h3>
             </section>
-            <section id="ships-list">
-            <table id = "ships-table"></table>
+            <section class="ships-list">
+            <div class = "ships-table"></div>
             </section>
         </div>
 
         <script type="text/javascript" src="/config/config.js"></script>
         <script type="module" src="/static/js/main.js"></script>
-        <script type="module" src="/static/js/hangar.js"></script>
         <script type="module">
-            
+            import App from '/static/js/core/app.js';
             import {  initBaseForHangar } from '/static/js/hangar.js';
 
-            window.addEventListener('load', initBaseForHangar);
+            App.init().then(() => { initBaseForHangar() });
             
         </script>
   </body>
