--- a/views/fleet/fleet.html
+++ b/views/fleet/fleet.html
@@ -25,6 +25,10 @@
                 <section>
                     <h3 data-translate="true">fleet.view.single.title</h3>
                 </section>
+                <section id=fleet-delete-section>
+                    <div id="fleet-delete" data-translate="true">fleet.view.single.delete</div>
+                    <div id="fleet-delete-error" class="error"> </div>
+                </section>
                 <section id="fleet-detail">
                     <table id = "fleet-table"></table>
                 </section>
